# eunomia

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
cas/: Cargo.toml
cas/examples/: gen_cas_corpus.rs
cas/fuzz/: .gitignore  Cargo.toml
cas/fuzz/corpus/chunker/: multi
cas/fuzz/corpus/gc_mark/: chunked_mixed  inline  shared_subtree  wide_fanout
cas/fuzz/corpus/index_frame/: empty  pad0  pad17
cas/fuzz/corpus/mount_recovery/: clean  torn_1234  torn_f00d  v2_refused  wal_pending
cas/fuzz/corpus/mount_reseal/: clean  torn_dead  torn_f00d  v2_refused  wal_pending
cas/fuzz/corpus/ref_table/: empty  multi_ref  simple
cas/fuzz/corpus/superblock/: bad_checksum  bad_magic  truncated  valid  version_v2
cas/fuzz/corpus/superblock_fixup/: field_extremes  valid
cas/fuzz/corpus/tlv_entry/: chunked  dir  empty_inline  exec  field_max  flags_multi  inline  inline_max  max_name
cas/fuzz/corpus/tree_node/: big_entry_leaf  internal  leaf  mixed_leaf  single_leaf  wide_leaf
cas/fuzz/corpus/wal_replay_scan/: rename  single
cas/fuzz/corpus/wal_replay_scan_fixup/: chain
cas/fuzz/fuzz_targets/: chunker.rs  gc_mark.rs  index_frame.rs  mount_recovery.rs  mount_reseal.rs  ref_table.rs  superblock.rs  superblock_fixup.rs  tlv_entry.rs  tree_node.rs  wal_replay_scan.rs  wal_replay_scan_fixup.rs
cas/proptest-regressions/: prolly.txt  store.txt
cas/src/: chunk.rs  dev.rs  disk.rs  file.rs  fuzz_support.rs  gc.rs  hash.rs  lib.rs  overlay.rs  prolly.rs  proofs.rs  store.rs  tlv.rs  tree.rs
cas/tests/: fuzz_corpus.rs  fuzz_regressions.rs
dma-pool/: Cargo.toml
dma-pool/src/: lib.rs  proofs.rs
eunomia-sys/: Cargo.toml  build.rs
eunomia-sys/examples/: gen_eunomia_sys_corpus.rs
eunomia-sys/fuzz/: Cargo.toml
eunomia-sys/fuzz/corpus/path/: deep  dot  dot_prefixed_name  dotdot_double_escape  dotdot_interior  dotdot_midpop  dotdot_prefixed_name  double_slash  leading_slash  many_slashes  max_components  mixed  nul_in_component  over_max_components  slash_run_then_dotdot
eunomia-sys/fuzz/fuzz_targets/: path.rs
eunomia-sys/src/: bootstrap.rs  console.rs  encode.rs  fs.rs  futex.rs  grant.rs  heap.rs  io_error.rs  lib.rs  pal.rs  path.rs  random.rs  readdir.rs  stdio.rs  syscall.rs  thread.rs  tls.rs
eunomia-sys/tests/: fuzz_corpus.rs  fuzz_regressions.rs  path_proptest.rs
freelist/: Cargo.toml
freelist/src/: lib.rs
ipc/: Cargo.toml  build.rs
ipc/examples/: gen_ipc_corpus.rs
ipc/fuzz/: Cargo.toml
ipc/fuzz/corpus/connect_decode/: grant  grant_trailing  req_min_window  req_range  req_short  req_single  req_single_version  req_trailing  req_wrong_tag
ipc/fuzz/corpus/wire_decode/: data  error  header_only  open  ping  read  trailing
ipc/fuzz/fuzz_targets/: connect_decode.rs  wire_decode.rs
ipc/src/: endpoint.rs  fuzz_support.rs  header.rs  le_bytes.rs  lib.rs  model.rs  proofs.rs  reactor.rs  session.rs  sync.rs  sys.rs  transport.rs  wire.rs
ipc/tests/: fuzz_corpus.rs
kcore/: Cargo.toml
kcore/src/: aspace.rs  channel.rs  cspace.rs  env.rs  id.rs  irq.rs  lib.rs  notification.rs  ready.rs  store.rs  sysabi.rs  test_store.rs  thread.rs  timer.rs  untyped.rs
kcore/src/proofs/: aspace.rs  bounds.rs  cdt.rs  channel.rs  contracts.rs  exhaustive.rs  ghost.rs  mod.rs  notification.rs  stubs.rs  sysabi.rs  teardown.rs  thread.rs  transition.rs  untyped.rs  wf.rs  world.rs
kernel/: Cargo.toml  build.rs  linker.ld  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: aspace.rs  boot.rs  channel.rs  cspace.rs  env.rs  exceptions.rs  gic.rs  irq.rs  main.rs  mmu.rs  notification.rs  store.rs  syscall.rs  thread.rs  timer.rs  uart.rs  untyped.rs  user.rs
le-bytes/: Cargo.toml
le-bytes/src/: lib.rs
loader/: Cargo.toml
loader/examples/: gen_loader_corpus.rs
loader/fuzz/: Cargo.toml
loader/fuzz/corpus/elf_parse/: one_segment  two_segments
loader/fuzz/corpus/segment_layout/: i5_witness  max_valid  page_aligned  unaligned  unaligned_empty
loader/fuzz/corpus/startup/: child_argv  entropy_seed  shell_named  storaged_regions  truncated_argv  truncated_count
loader/fuzz/fuzz_targets/: elf_parse.rs  segment_layout.rs  startup.rs
loader/proptest-regressions/: startup.txt
loader/src/: elf.rs  lib.rs  main.rs  spawn.rs  startup.rs
loader/tests/: fuzz_corpus.rs  fuzz_regressions.rs  layout_props.rs
mkfs/: Cargo.toml
scratchpad/: Cargo.toml
storage-server/: Cargo.toml
storage-server/examples/: gen_storage_corpus.rs
storage-server/fuzz/: Cargo.toml
storage-server/fuzz/corpus/request_dispatch/: apply_batch_seed  close  delete_snapshot  enumerate  gc  list  list_snapshot_h2  list_snapshots  list_tags  mint_ticket  open_child  open_snapshot  read  read_subtree_h1  redeem_ticket  rename  revoke_ref  rollback  set_class  snapshot  stat  statfs  sync  tag  unlink  untag  write
storage-server/fuzz/fuzz_targets/: request_dispatch.rs  structured_request.rs
storage-server/src/: lib.rs  main.rs  wire.rs
storage-server/tests/: fuzz_corpus.rs  fuzz_regressions.rs  rights_lattice.rs  sessions.rs
urt/: Cargo.toml
urt/src/: futex.rs  lib.rs  lock.rs  proofs.rs  random.rs  slots.rs  spawn.rs  thread.rs  thread_layout.rs  time.rs  tls.rs
user/alloctests/: Cargo.toml
user/alloctests/src/: lib.rs
user/console/: Cargo.toml  build.rs  link.ld
user/console/src/: main.rs  pl011.rs
user/coretests/: Cargo.toml  build.rs
user/coretests/src/: lib.rs
user/hello/: Cargo.toml  build.rs
user/hello/src/: main.rs
user/init/: Cargo.toml  build.rs
user/init/src/: main.rs
user/selftest/: Cargo.toml  build.rs
user/selftest/src/: main.rs
user/shell/: Cargo.toml  build.rs  link.ld
user/shell/src/: main.rs  runtime.rs  tests.rs
user/stdfs/: Cargo.toml  build.rs
user/stdfs/src/: main.rs
user/stdio/: Cargo.toml  link.ld
user/stdio/src/: main.rs
user/stdsmoke/: Cargo.toml
user/stdsmoke/src/: main.rs
user/storaged/: Cargo.toml  build.rs  link.ld
user/storaged/src/: main.rs
virtio-blk/: Cargo.toml
virtio-blk/src/: blockdev.rs  fake.rs  lib.rs
virtio-blk/tests/: async_complete.rs  driver.rs  ring_props.rs
(+414 files in other folders)
