[workspace]
resolver = "2"
members = [
    "kernel",
    "kcore",
    "ipc",
    "dma-pool",
    "cas",
    "storage-server",
    "virtio-blk",
    "loader",
    "scratchpad",
    "mkfs",
    "urt",
]
# cargo-fuzz crates are standalone workspaces (own target dir, own nightly
# profile with debug-assertions/overflow-checks forced on); keep them out
# of the host workspace so a plain `cargo build` never pulls libfuzzer.
exclude = [
    "cas/fuzz",
    "storage-server/fuzz",
    "loader/fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
# The M1 embedded EL0 test program (kernel/src/user.rs) must not call into
# kernel .text (EL0 execute-never); opt-level 1 inlines core's #[inline]
# helpers into .user_text. Scaffold constraint until the M3 loader gives
# userspace its own binaries.
opt-level = 1

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
