[package]
name = "cas"
version.workspace = true
edition.workspace = true
license.workspace = true

# "std" enables host testing; "no_std" for embedded use is planned but
# not yet wired — all algorithms are host-testable (spec rev2§1).
[features]
default = ["std"]
std = ["blake3/std"]
# Exposes `fuzz_support` (checksum re-sealing helpers for the cargo-fuzz
# harnesses in cas/fuzz) and derives `Arbitrary` on the shared `RefEdit`
# vocabulary so the storage server's structured-request fuzzer can build a
# guarded batch. Only ever enabled alongside `std` (the cas/fuzz and
# storage-server fuzz crates pass both); `arbitrary` is a std crate, and it is
# off entirely under `cargo verus verify --no-default-features`.
fuzzing = ["dep:arbitrary"]
# Derives serde on `RefEdit` so it can travel inside the storage wire
# `Request::Apply`. Off under verify (no_std + no optional deps).
serde = ["dep:serde"]

[dependencies]
blake3 = { version = "1", default-features = false, features = ["pure"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }

# vstd is the *Verus* dependency (see doc/guidelines/verus.md):
# the `verus!{}` macro + ghost vocabulary for the rev2§4.7 host-chokepoint proofs —
# the on-disk superblock chokepoint (`validate_geometry`/`decode_checked` in
# disk.rs) and the rev2§4.9 directory-entry TLV codec (`decode_raw`/`encode_raw`
# in prolly.rs — full exec-level canonical-form round-trip + decode totality).
# The `alloc` feature enables vstd's `Vec` specs, which the `Vec`-building TLV
# encoder needs (the fixed-size superblock chokepoint is Vec-free). It
# stays `no_std` (no `std` feature), so it rides into the one user binary that
# pulls cas (storaged) unchanged — storaged already carries vstd transitively via
# its ipc/urt path-deps and is itself no_std+alloc, so this edge
# adds no new binary and vstd-with-alloc erases under the
# aarch64 cross-build. In an ordinary build (host `cargo
# test` *and* the aarch64 userspace cross-build via kernel/build.rs) the
# `verus!{}` macro erases to plain Rust and vstd compiles to nothing
# load-bearing. Pinned (=version) in lockstep with kcore/ipc/urt/dma-pool: an
# upgrade is a deliberate PR.
vstd = { version = "=0.0.0-2026-05-31-0205", default-features = false, features = ["alloc"] }

# The shared verified read-direction little-endian byte machinery (the `u*_le`
# specs, their `lemma_u*_le_bytes` split identities, and the `read_u*_le` exec
# readers) the prolly.rs node decoder cites by full path. no_std + no-alloc, so it
# rides into the userspace cross-build with cas unchanged; its proof helpers erase
# in a plain build. A `verify = true` dep is re-verified transitively on a cold run.
le-bytes = { path = "../le-bytes" }

# `cargo verus verify -p cas --no-default-features` targets this crate. cas is
# std-on-host / Vec/BTreeMap-heavy, but the verified chokepoint fns (superblock
# byte parsing in disk.rs, the TLV codec in prolly.rs) are feature-agnostic, so
# the no_std+alloc variant is the one verified.
[package.metadata.verus]
verify = true

[dev-dependencies]
proptest = "1"

# cfg(verus_keep_ghost)/cfg(verus_only) are set by Verus during `cargo verus
# verify`; teach plain cargo they're expected (same handling as
# ipc/urt/dma-pool/kcore). `cas` does not use Kani, so nothing injects
# cfg(kani).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(verus_keep_ghost)", "cfg(verus_only)"] }
