[package]
name = "freelist"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Host-test escape hatch: the crate is no_std for the aarch64 userspace
# cross-build (it rides into storaged via dma-pool and into every alloc-using
# binary via urt's heap), but `cargo test`/`--features std` build
# against std so the test harness links. Same recipe as dma-pool/Cargo.toml.
std = []

[dependencies]
# vstd is the *Verus* dependency (see doc/guidelines/verus.md): the `verus!{}`
# macro + ghost vocabulary for the rev2§4.7/§6 host-chokepoint proof of the
# first-fit free-list allocator (`FreeList` — handed-out extents pairwise
# disjoint + in-pool + aligned, ∀). `default-features = false` ⇒ no_std, no
# alloc, so it rides into the userspace cross-build unchanged. In an ordinary
# build the `verus!{}` macro erases to plain Rust and vstd compiles to nothing
# load-bearing. Pinned (=version) in lockstep with kcore/ipc/urt/dma-pool: an
# upgrade is a deliberate PR.
vstd = { version = "=0.0.0-2026-05-31-0205", default-features = false }

[dev-dependencies]
# Present for the wrapper proptest tier (urt heap). Same pin as the rest.
proptest = "1"

# `cargo verus verify -p freelist` targets this crate (the flag kcore/ipc/urt/dma-pool use).
[package.metadata.verus]
verify = true

# cfg(verus_keep_ghost)/cfg(verus_only) are set by Verus during `cargo verus
# verify`; teach plain cargo they're expected (same handling as dma-pool/ipc/urt/kcore).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(verus_keep_ghost)", "cfg(verus_only)"] }
