[package]
name = "ipc"
version.workspace = true
edition.workspace = true

# no_std by default. "wire" pulls the postcard codec (and, with it, alloc — see
# lib.rs); minimal binaries (hello/selftest/init) that use only `ipc::sys` build
# without it and stay no-alloc. "std" is for host testing. "fuzzing" exposes the
# wire-codec fuzz support (representative body type + oracle) — rev2§3.7 — so it
# implies "wire". (Mirrors storage-server's optional-serde gating.)
[features]
# `debug-log` (rev2§7): gates the EL0 debug-print libcalls
# (`sys::debug_putc`/`debug_write`) — the kernel-diagnostic path for pre-console
# server logging + panic reporting, not user-facing I/O. Default-on so every
# server binary (all carry `ipc` with default features) keeps its diagnostics; a
# production userspace build can drop it to emit no debug syscalls.
default = ["debug-log"]
debug-log = []
std = []
wire = ["dep:serde", "dep:postcard"]
fuzzing = ["wire"]

[dependencies]
# The wire codec (rev2§3.7): a postcard body behind a module-private trait. no_std +
# alloc (same as storage-server); the aarch64 build links these over urt's heap.
# Optional — only the `wire` feature pulls them, so the codec is opt-in.
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
postcard = { version = "1", default-features = false, features = ["alloc"], optional = true }

# vstd is the *Verus* dependency (see doc/guidelines/verus.md):
# the `verus!{}` macro + ghost vocabulary for the rev2§4.7 host-chokepoint proofs
# (the rev2§3.7 message header in `header.rs`). `default-features = false` ⇒ no_std,
# no alloc, so it rides into the minimal alloc-free user binaries unchanged. In an
# ordinary build (host `cargo test` *and* the aarch64 userspace cross-build via
# kernel/build.rs) the `feature(..)` flags are gated on `verus_keep_ghost` — set
# only under `cargo verus verify` — so `verus!{}` erases to plain Rust and vstd
# compiles to nothing load-bearing (the header codec calls no vstd exec fn). Pinned
# (=version) in lockstep with kcore: an upgrade is a deliberate PR. Same recipe as
# kcore/Cargo.toml.
vstd = { version = "=0.0.0-2026-05-31-0205", default-features = false }

# loom/shuttle reach the IPC model's *library* code (ModelTransport's sync
# primitives), so they are real deps, not dev-deps — but only when a model is
# being built (RUSTFLAGS="--cfg loom|shuttle"); a normal/aarch64 build never
# pulls them. Pinned (same as urt).
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[target.'cfg(shuttle)'.dependencies]
shuttle = "0.7"

# proptest is the baseline (rev2§6) property tier for the reactor's *sequential*
# dispatch (the `used`-mask bit allocation, the `pending` drain, the lowest-bit
# scan) and the endpoint cap marshalling — single-threaded state-machine logic,
# not the concurrent protocol (that is the Loom/Shuttle harnesses' + the TLA
# model's). A dev-dep, so it never reaches a normal/aarch64 build. Per-crate
# `proptest = "1"`, the workspace convention (dma-pool/urt/cas).
[dev-dependencies]
proptest = "1"

# The seed generator uses the fuzz-only DemoMsg, so it is skipped unless the
# `fuzzing` feature is on (otherwise a plain `cargo test`/`build` would try to
# compile it and fail on the missing `fuzz_support`).
[[example]]
name = "gen_ipc_corpus"
required-features = ["fuzzing"]

# `cargo verus verify -p ipc` targets this crate (the same flag kcore/scratchpad use).
[package.metadata.verus]
verify = true

# cfg(kani) is injected by cargo-kani; cfg(loom)/cfg(shuttle) by
# RUSTFLAGS="--cfg loom|shuttle" for the IPC reactor models;
# cfg(verus_keep_ghost)/cfg(verus_only) by Verus during `cargo verus verify`.
# target_os="eunomia" is the custom aarch64-unknown-eunomia target (the real
# `svc #0` syscall arm, alongside the bare-metal "none"); it is unknown to a
# host/none toolchain's check-cfg. Teach plain cargo all are expected (same
# handling as urt/kcore).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)", "cfg(loom)", "cfg(shuttle)", "cfg(verus_keep_ghost)", "cfg(verus_only)", 'cfg(target_os, values("eunomia"))'] }
