[package]
name = "kcore"
version.workspace = true
edition.workspace = true

# kcore is the architecture-independent kernel object machinery: host-buildable
# so Verus and ordinary `cargo test` can verify it, and cross-buildable for
# aarch64-unknown-none-softfloat as a dependency of `kernel`.
#
# vstd is the *Verus* dependency (see doc/guidelines/verus.md): it
# provides the `verus!{}` macro + the ghost `spec`/`proof`/`int` vocabulary for
# the deductive proofs (`untyped::carve`, the cspace/CDT contracts). It is `#![no_std]`
# by default (std/alloc are opt-in features, off here) and its nightly
# `feature(..)` flags are gated on `verus_keep_ghost`, set only under
# `cargo verus verify` — so in an ordinary `cargo build` (host or the aarch64
# kernel build) `verus!{}` erases to plain Rust and vstd compiles to nothing
# load-bearing. Pinned (=version): an upgrade is a deliberate PR that re-runs the
# proofs, exactly like the cargo-kani pin.
[dependencies]
vstd = { version = "=0.0.0-2026-05-31-0205", default-features = false }

# `cargo verus verify -p kcore` targets this crate (the same flag scratchpad uses).
[package.metadata.verus]
verify = true

# cfg(verus_keep_ghost)/cfg(verus_only) are injected by Verus during
# `cargo verus verify`. Teach plain cargo they are expected.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(verus_keep_ghost)", "cfg(verus_only)"] }
