[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
# `debug-log` (rev2§7): the EL0 debug-print scaffold (DebugPutc/DebugWrite)
# re-scoped to a disclosed kernel-diagnostic path. Default-on for dev images so
# pre-console server diagnostics and panic reporting reach the UART; a production
# kernel (`cargo build --no-default-features`) makes the two EL0 debug-output
# syscalls inert no-ops, closing the ambient-authority hole for EL0.
default = ["debug-log"]
debug-log = []

# Boot the M1 embedded EL0 exit-criterion test instead of loading the
# real init process.
m1-test = []

[dependencies]
loader = { path = "../loader", default-features = false }
kcore = { path = "../kcore" }
